--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -161,10 +161,10 @@
             <div class="dropdown-menu">
               <div class="dropdown-menu-columns">
                 <div class="dropdown-menu-column">
-                  <a class="dropdown-item" href="./empty.html">
+                  <a class="dropdown-item" routerLink="/users">
                     Users
                   </a>
-                  <a class="dropdown-item" href="./empty.html">
+                  <a class="dropdown-item" routerLink="/roles">
                     Roles
                   </a>
                 </div>
