globals & environments are defined

--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -32,7 +32,7 @@
                     </li>
                     <li class="list-inline-item">
                         <a href="./changelog.html" class="link-secondary" rel="noopener">
-                            v1.0.0-beta16
+                            {{version}}
                         </a>
                     </li>
                 </ul>
