--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-header></app-header> -->
-<div class="page">
+<div class="page" *ngIf="(auth.isLoginPublisher|async)">
   <app-sidebar></app-sidebar>
   <div class="page-wrapper" style="margin-left: 15rem;">
 
@@ -7,4 +7,7 @@
 
     <app-footer></app-footer>
   </div>
+</div>
+<div class="page page-center" *ngIf="!(auth.isLoginPublisher|async)">
+  <router-outlet></router-outlet>
 </div>
