navbar has added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <app-header></app-header> -->
 <div class="page" *ngIf="(auth.isLoginPublisher|async)">
   <app-sidebar></app-sidebar>
+  <app-header></app-header>
   <div class="page-wrapper" style="margin-left: 15rem;">
 
     <router-outlet></router-outlet>
