Project title has changed

--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
     </button>
     <h1 class="navbar-brand navbar-brand-autodark">
       <a href=".">
-        <img src="./static/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
+        Project Base
       </a>
     </h1>
     <div class="navbar-nav flex-row d-lg-none">
