--- a/src/app/users/user-add/user-add.component.html
+++ b/src/app/users/user-add/user-add.component.html
@@ -4,15 +4,42 @@
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda ea est, eum exercitationem fugiat
-            illum itaque laboriosam magni necessitatibus, nemo nisi numquam quae reiciendis repellat sit soluta unde.
-            Aut!
-        </div>
-        <div class="mt-3">
-            <button class="btn btn-primary" type="button" data-bs-dismiss="offcanvas">
-                Close offcanvas
-            </button>
+        <div class="action-tags">
+            <div class="mb-1">
+                <label for="email" class="form-label">{{'USERS.TABLE.EMAIL' | translate}}</label>
+                <input type="email" id="email" name="email" [(ngModel)]="user.email"
+                    class="new-todo-item-title form-control" placeholder="{{'USERS.TABLE.EMAIL' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label for="password" class="form-label">{{'USERS.TABLE.PASSWORD' | translate}}</label>
+                <input type="password" id="password" name="password" [(ngModel)]="user.password" minlength="8"
+                    autocomplete="new-password" class="new-todo-item-title form-control"
+                    placeholder="{{'USERS.TABLE.PASSWORD' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label for="first_name" class="form-label">{{'USERS.TABLE.FIRST_NAME' | translate}}</label>
+                <input type="text" id="first_name" name="first_name" [(ngModel)]="user.first_name"
+                    class="new-todo-item-title form-control" placeholder="{{'USERS.TABLE.FIRST_NAME' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label for="last_name" class="form-label">{{'USERS.TABLE.LAST_NAME' | translate}}</label>
+                <input type="text" id="last_name" name="last_name" [(ngModel)]="user.last_name"
+                    class="new-todo-item-title form-control" placeholder="{{'USERS.TABLE.LAST_NAME' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label for="phone_number" class="form-label">{{'USERS.TABLE.PHONE' | translate}}</label>
+                <input type="text" id="phone_number" name="phone_number" [(ngModel)]="user.phone_number"
+                    class="new-todo-item-title form-control" placeholder="{{'USERS.TABLE.PHONE' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label class="form-label" for="select2-multiple">{{'USERS.TABLE.ROLE' | translate}}</label>
+                <ng-select [items]="roles" bindLabel="role_name" name="selectedRoles" bindValue="_id" [multiple]="true"
+                    class="form-control" [(ngModel)]="user.role_ids">
+                </ng-select>
+            </div>
+            <div class="text-end">
+                <button type="button" class="btn btn-primary">SAVE</button>
+            </div>
         </div>
     </div>
 </div>
