--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -79,5 +79,5 @@
 </div>
 
 
-<app-user-add></app-user-add>
+<app-user-add [roles]="roles" [parent]="this"></app-user-add>
 <app-user-update></app-user-update>
