--- a/src/app/users/user-update/user-update.component.html
+++ b/src/app/users/user-update/user-update.component.html
@@ -1,18 +1,51 @@
 <div class="offcanvas offcanvas-end" tabindex="-1" id="userUpdateModal" aria-labelledby="userUpdateModal">
     <div class="offcanvas-header">
         <h2 class="offcanvas-title">{{'USERS.UPDATE_TITLE' | translate}}</h2>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="updateModalClose"></button>
     </div>
     <div class="offcanvas-body">
-        <div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda ea est, eum exercitationem fugiat
-            illum itaque laboriosam magni necessitatibus, nemo nisi numquam quae reiciendis repellat sit soluta unde.
-            Aut!
+        <div class="action-tags">
+            <div class="mb-1">
+                <label for="email" class="form-label"><br>{{'USERS.TABLE.EMAIL' | translate}}</label>
+                <input type="email" id="email" name="email" [value]="user.email" disabled
+                    class="new-todo-item-title form-control" placeholder="{{'USERS.TABLE.EMAIL' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label for="password" class="form-label">{{'USERS.TABLE.PASSWORD' | translate}}</label>
+                <input type="password" id="password" name="password" [(ngModel)]="user.password" minlength="8"
+                    autocomplete="new-password" class="new-todo-item-title form-control"
+                    placeholder="{{'USERS.TABLE.PASSWORD' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label for="firstname" class="form-label">{{'USERS.TABLE.FIRST_NAME' | translate}}</label>
+                <input type="text" id="firstname" name="firstname" [(ngModel)]="user.first_name"
+                    class="new-todo-item-title form-control" placeholder="{{'USERS.TABLE.FIRST_NAME' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label for="lastname" class="form-label">{{'USERS.TABLE.LAST_NAME' | translate}}</label>
+                <input type="text" id="lastname" name="lastname" [(ngModel)]="user.last_name"
+                    class="new-todo-item-title form-control" placeholder="{{'USERS.TABLE.LAST_NAME' | translate}}" />
+            </div>
+            <div class="mb-1">
+                <label for="phone_number" class="form-label">{{'USERS.TABLE.PHONE' | translate}}</label>
+                <input type="text" id="phone_number" name="phone_number" [(ngModel)]="user.phone_number"
+                    class="new-todo-item-title form-control" placeholder="{{'USERS.TABLE.PHONE' | translate}}" />
+            </div>
+            <!-- <div class="mb-1">
+              <label class="form-label" for="select2-multiple">{{'USERS.TABLE.LEVEL' | translate}}</label>
+              <ng-select [items]="userLevels" bindLabel="name" name="level" bindValue="id" [(ngModel)]="user.level">
+              </ng-select>
+            </div> -->
+            <div class="mb-1">
+                <label class="form-label" for="select2-multiple">Roles</label>
+                <ng-select [items]="roles" bindLabel="role_name" name="selectedRoles" bindValue="_id" [multiple]="true"
+                    [(ngModel)]="user.role_ids" class="form-control">
+                </ng-select>
+            </div>
         </div>
-        <div class="mt-3">
-            <button class="btn btn-primary" type="button" data-bs-dismiss="offcanvas">
-                Close offcanvas
-            </button>
+        <div class="text-end">
+            <button type="submit" (click)="update()" class="btn btn-primary update-btn me-1">{{'COMMON.UPDATE' |
+                translate}}</button>
         </div>
     </div>
 </div>
