--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -60,7 +60,7 @@
                                     <path d="M16 18h4"></path>
                                 </svg>
                             </button>
-                            <button class="btn btn-pill btn-sm btn-outline-danger">
+                            <button class="btn btn-pill btn-sm btn-outline-danger" (click)="delete(row._id)">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x"
                                     width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
                                     fill="none" stroke-linecap="round" stroke-linejoin="round">
