role update component done

--- a/src/app/roles/role-list/role-list.component.html
+++ b/src/app/roles/role-list/role-list.component.html
@@ -85,6 +85,7 @@
 </div>
 
 <app-role-add [parent]="this" [privileges]="privileges" [privilegeGroups]="privilegeGroups"></app-role-add>
+<app-role-update [role]="role" [parent]="this" [privileges]="privileges" [privilegeGroups]="privilegeGroups"></app-role-update>
 
 <!-- Right Sidebar starts -->
 <!-- <div class="modal modal-slide-in sidebar-todo-modal fade" id="new-role-modal">
