--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -238,7 +238,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./form-elements.html">
+          <a class="nav-link" routerLink="/categories">
             <span
               class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/checkbox -->
               <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
