auditlogs component added

--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -254,7 +254,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./form-elements.html">
+          <a class="nav-link" routerLink="/activities">
             <span
               class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/checkbox -->
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-activity" width="44"
